--- a/test/index.html
+++ b/test/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-  <a href="/1st_page">1st page</a>
-  <a href="/2nd_page">2nd page</a>
-  <a href="/3th_page">3th page</a>
-  <a href="/4th_page">4th page</a>
+  <a href="/?id=1st_page">1st page</a>
+  <a href="/?id=2nd_page">2nd page</a>
+  <a href="/?id=3th_page">3th page</a>
+  <a href="/?id=4th_page">4th page</a>
 </body>
 
 </html>
