--- a/test/index.html
+++ b/test/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-  <a href="/?id=1st_page">1st page</a>
-  <a href="/?id=2nd_page">2nd page</a>
-  <a href="/?id=3th_page">3th page</a>
-  <a href="/?id=4th_page">4th page</a>
+  <a href="/?id=1_page">1 page</a>
+  <a href="/?id=2_page">2 page</a>
+  <a href="/?id=3_page">3 page</a>
+  <a href="/?id=4_page">4 page</a>
 </body>
 
 </html>
