--- a/test/index.html
+++ b/test/index.html
@@ -8,10 +8,35 @@
 </head>
 
 <body>
-  <a href="/?id=1_page">1 page</a>
-  <a href="/?id=2_page">2 page</a>
-  <a href="/?id=3_page">3 page</a>
-  <a href="/?id=4_page">4 page</a>
+  <!-- td,tr사용 -->
+  <table border="1">
+    <tr>
+      <th>페이지 이름</th>
+      <th>페이지 정보</th>
+    </tr>
+    <tr>
+      <td><a href="/?id=1_page">1 page</a></td>
+      <td>1 페이지 상세 정보</td>
+    </tr>
+    <tr>
+      <td><a href="/?id=2_page">2 page</a></td>
+      <td>2 페이지 상세 정보</td>
+    </tr>
+    <tr>
+      <td><a href="/?id=3_page">3 page</a></td>
+      <td>3 페이지 상세 정보</td>
+    </tr>
+    <tr>
+      <td><a href="/?id=4_page">4 page</a></td>
+      <td>4 페이지 상세 정보</td>
+    </tr>
+
+
+  </table>
+
+
+
+
 </body>
 
 </html>
