📣 : section29~30 강의를 복습하면서 불필요한 파일 제거 form 태그와 post와 URI의 연관성을 생각해 보았다.

--- a/lecture/생활코딩/section30/syntax/form.html
+++ b/lecture/생활코딩/section30/syntax/form.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <form action="http://http://localhost:3000/process_create" method="POST">
+  <form action="http://localhost:3000/process_create" method="POST">
     <p><input type="text" name="title"></p>
     <p>
       <textarea name="description"></textarea>
